@@ -62,6 +62,7 @@ CHANGELOG Roundcube Webmail
 - Fix Edge encoding bug when pasting text into the HTML editor, update to TinyMCE 4.5.8 (#5885)
 - Fix handling of unknown Content-Disposition type (#6002)
 - Fix truncated folder name on messages list in multi-folder mode, for folders with non-ascii characters (#6004)
+- Fix bug where removing the last subfolder did not hide toggle button on its parent record (#6007)
 
 RELEASE 1.3.1
 -------------
